--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         </form>
     </section>
-    <main class="container_1 section_5_main">
+    <main class="section_5_main">
         <button class="section_5_button">
             FREE PRE-ORDER
         </button>
