--- a/index.html
+++ b/index.html
@@ -51,11 +51,19 @@
     Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
   </p>
     </section>
-    <section class="container section_3 section_wrapper">
+    <section class="section_3">
         <form action="" class="form">
+           <div class="square_1">
+            </div>
+           <div class="square_2">
+            </div>
+            <div class="square_3">
+            </div>
+            <div>
         <p class="section_3_tittle">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde aliquid quibusdam eum, velit incidunt est natus? Tempora tenetur veniam aliquam cupiditate ipsa ad, inventore sunt nisi ab fuga, debitis corrupti?
         </p>
+    </div>
     </form>
     </section>
     <section class="container section_4">
